# fastapi_template

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  dockerfile  entrypoint.sh  fastapi_skill_plan.md  pyproject.toml  requirements.txt  skills-lock.json
.claude/: settings.local.json
app/: main.py  settings.py
app/cli/: seed.py  sync_permissions.py
app/core/: circuit_breakers.py  data_validation.py  dependencies.py  dependency_factory.py  esclient.py  fixed_window_ratelimit.py  health.py  logger.py  rate_limiters.py  rbac.py  recovery.py  validation.py
app/database/: postgres_db.py  redis_db.py
app/error/: auth.py  base.py  custom_exception.py  ratelimit.py  rbac.py  register.py  register_error.py  tenant.py  validation.py  validation_exception.py
app/middleware/: logger_middleware.py  ratelimiting_middleware.py  security_middleware.py
app/models/: auth.py  db_model.py  rbac.py  tenant.py
app/queue/: celery.py  task.py
app/schema/: auth.py  permission.py  role.py  search.py  tenant.py  user.py
docs/: 02-project-layout.md  03-authentication.md  04-rbac-and-permissions.md  05-multi-tenancy.md  06-authz-cache.md  07-rate-limiting-and-resilience.md  08-error-handling-and-logging.md  09-database-and-background-jobs.md  README.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
migrations/: env.py
tests/: conftest.py  test_auth.py  test_authz_cache.py  test_data_validation.py  test_hierarchy_rbac.py  test_permissions_roles.py  test_recovery.py  test_role_creation_hierarchy.py  test_security.py  test_tenant.py  test_validation.py
(+106 files in other folders)
